samples/_failures_safe/1761637613_b43ee9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c36f3782.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c36f3782.c:162:17: error: expected expression at end of input
  162 |                 tokens[token_count] =
      |                 ^~~~~~
./samples/SAFE/__tmp_c36f3782.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c36f3782.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c36f3782.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c36f3782.c:162:17: error: expected declaration or statement at end of input
